gen失败
